--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -1,5 +1,5 @@
 {% load blocktrans trans from i18n %}
-{% load is_admin from privacy_tags %}
+{% load is_admin admins from privacy_tags %}
 {% load gravatar_url from gravatar %}
 {% load get_spam_score readthedocs_language_name readthedocs_language_name_local from ext_theme_tags %}
 
@@ -201,6 +201,28 @@ collapsed, to save visual space and can be expanded with the right label.
         and also know what rules are matching this project.
       {% endcomment %}
       <div class="content">
+        <h3>{% trans "Impersonate" %}</h3>
+        <div class="ui sub header">{% trans "Project maintainer" %}</div>
+        <div class="ui vertical list">
+          {% for user in project|admins %}
+            <div class="item">
+              <a href="{{ ADMIN_URL|cut:"/admin" }}/impersonate/{{ user.pk }}/" target="_blank">{{ user.username }}</a>
+            </div>
+          {% endfor %}
+
+        </div>
+
+        {% if USE_ORGANIZATIONS %}
+          <div class="ui sub header">{% trans "Organization owner" %}</div>
+          <div class="ui vertical list">
+            {% for owner in organization|admins %}
+              <div class="item">
+                <a href="{{ ADMIN_URL|cut:"/admin" }}/impersonate/{{ owner.pk }}/" target="_blank">{{ owner.username }}</a>
+              </div>
+            {% endfor %}
+          </div>
+        {% endif %}
+
         {% if not USE_ORGANIZATIONS %}
           <h3>{% trans "Spam" %}</h3>
           <div class="ui sub header">{% trans "Spam score" %}</div>
