Organizations: allow uploading avatar
Matches https://github.com/readthedocs/readthedocs.org/pull/12254

--- a/readthedocsext/theme/templates/organizations/settings/organization_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/organization_edit.html
@@ -15,7 +15,10 @@
 {% endblock organization_edit_content_header %}
 
 {% block organization_edit_content %}
-  <form class="ui form" method="post" action=".">
+  <form class="ui form"
+        method="post"
+        enctype="multipart/form-data"
+        action=".">
     {% csrf_token %}
     {{ form|crispy }}
     <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
