--- a/readthedocsext/theme/templates/organizations/partials/header.html
+++ b/readthedocsext/theme/templates/organizations/partials/header.html
@@ -28,7 +28,9 @@ collapsed, to save visual space and can be expanded with the right label.
         {% block organization_header_title %}
           <div class="eight wide computer eight wide tablet sixteen wide mobile middle aligned column">
             <img class="ui micro rounded right spaced inline image"
-                 src="{% gravatar_url organization.email 48 %}"
+                 src="{{ organization.get_avatar_url }}"
+                 height="48"
+                 width="48"
                  alt="{% blocktrans trimmed with organization_name=organization.name %}{{ organization_name }} organization{% endblocktrans %}" />
             <a class="ui medium text" href="{{ organization.get_absolute_url }}">
               {{ organization.name }}
