--- a/readthedocsext/theme/templates/includes/components/config_label.html
+++ b/readthedocsext/theme/templates/includes/components/config_label.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load trans from i18n %}
 
 {% comment "rst" %}
   config_label
@@ -32,17 +32,9 @@
 
 {% endcomment %}
 
-<span
-  {% if popup %}
-    data-content="{{ popup }}"
-    aria-label="{{ popup }}"
-  {% endif %}
-  {% if url %}
-    href="{{ url }}"
-  {% endif %}
-  class="ui {% if classes %}{{ classes }} {% endif %}label">
-  {% if icon %}
-    <i class="{{ icon }} icon"></i>
-  {% endif %}
+<span {% if popup %}data-content="{{ popup }}" aria-label="{{ popup }}"{% endif %}
+      {% if url %}href="{{ url }}"{% endif %}
+      class="ui {% if classes %}{{ classes }}{% else %}{% if not text %}icon{% endif %}{% endif %} label">
+  {% if icon %}<i class="{{ icon }} icon"></i>{% endif %}
   {{ text }}
 </span>
