--- a/readthedocsext/theme/templates/includes/crud/remove_button.html
+++ b/readthedocsext/theme/templates/includes/crud/remove_button.html
@@ -64,31 +64,34 @@
      data-content="{{ action_text }}">
   <i class="fa-solid fa-trash icon"></i>
 
-  {% comment %}
-    This placement is important, as ``.ui.buttons`` uses :last-child, so we
-    can't place this after the last ``.ui.button``
-  {% endcomment %}
-  <div class="ui {% if warning_text %}tiny{% else %}mini{% endif %} modal"
-       data-modal-id="remove-{{ id }}">
-    <div class="header">{{ action_text }}</div>
-    <div class="content">
-      <p>{{ content_text }}</p>
-      {% if warning_text %}
-        <div class="ui warning message">{{ warning_text }}</div>
-      {% endif %}
-    </div>
-    <div class="actions">
-      <form method="post" action="{{ form_url }}">
-        {% csrf_token %}
-        {% if field_name and field_value %}
-          <input type="hidden" name="{{ field_name }}" value="{{ field_value }}" />
+  {# Avoid rogue modals leaking this UI if the button is disabled #}
+  {% if not is_disabled %}
+    {% comment %}
+      This placement is important, as ``.ui.buttons`` uses :last-child, so we
+      can't place this after the last ``.ui.button``
+    {% endcomment %}
+    <div class="ui {% if warning_text %}tiny{% else %}mini{% endif %} modal"
+         data-modal-id="remove-{{ id }}">
+      <div class="header">{{ action_text }}</div>
+      <div class="content">
+        <p>{{ content_text }}</p>
+        {% if warning_text %}
+          <div class="ui warning message">{{ warning_text }}</div>
         {% endif %}
-        <div class="ui cancel button">{% trans "Cancel" %}</div>
-        <input class="ui button negative"
-               type="submit"
-               value="{{ action_text }}"
-               name="{{ action_name }}">
-      </form>
+      </div>
+      <div class="actions">
+        <form method="post" action="{{ form_url }}">
+          {% csrf_token %}
+          {% if field_name and field_value %}
+            <input type="hidden" name="{{ field_name }}" value="{{ field_value }}" />
+          {% endif %}
+          <div class="ui cancel button">{% trans "Cancel" %}</div>
+          <input class="ui button negative"
+                 type="submit"
+                 value="{{ action_text }}"
+                 name="{{ action_name }}">
+        </form>
+      </div>
     </div>
-  </div>
+  {% endif %}
 </div>
