--- a/readthedocsext/theme/templates/projects/partials/announcements/github-app.html
+++ b/readthedocsext/theme/templates/projects/partials/announcements/github-app.html
@@ -15,7 +15,7 @@
           <div class="ui extra content">
             <a class="ui small primary fluid basic button"
                target="_blank"
-               href="{{ url }}">{% trans "Migrate your account to GitHub App" %}</a>
+               href="{{ url_blog }}">{% trans "Migrate your account to GitHub App" %}</a>
           </div>
         </div>
       </div>
