Use context data subclass queryset instead

--- a/readthedocsext/theme/templates/projects/integration_list.html
+++ b/readthedocsext/theme/templates/projects/integration_list.html
@@ -14,7 +14,7 @@
 {% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
-  {% include "projects/partials/edit/integration_list.html" with objects=object_list %}
+  {% include "projects/partials/edit/integration_list.html" with objects=subclassed_object_list %}
 {% endblock project_edit_content %}
 
 {% block project_edit_sidebar_help_topics %}
