Show "Last login" label next to the login method
This is just a demo of what we can do and/or how to use the `last_login_method`
template variable.

Closes #421

--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -47,6 +47,9 @@
         {% block authentication_email_text %}
           {% trans "Email" %}
         {% endblock authentication_email_text %}
+        {% if last_login_method == "email" %}
+          <div class="ui teal label">Last used</div>
+        {% endif %}
       </a>
 
       {% if USE_ORGANIZATIONS %}
