--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -24,6 +24,9 @@
         {{ verbiage }} {{ provider_name }}
       {% endblocktrans %}
     </a>
+    {% if last_login_method == "github" %}
+      <span class="ui compact small teal basic label">Last used</span>
+    {% endif %}
   </li>
   <div class="ui tiny modal" data-modal-id="github-select">
     <div class="header">
@@ -48,11 +51,16 @@
                       Our GitHub OAuth app
                     {% endblocktrans %}
                     <span class="ui compact small basic label">Default</span>
+                    {% if last_login_method == "github" %}
+                      <span class="ui compact small teal basic label">Last used</span>
+                    {% endif %}
                   {% elif provider.id == "githubapp" %}
                     {% blocktrans trimmed %}
                       Our GitHub App
                     {% endblocktrans %}
-                    <span class="ui violet compact small basic label">Beta</span>
+                    {% if last_login_method == "githubapp" %}
+                      <span class="ui compact small teal basic label">Last used</span>
+                    {% endif %}
                   {% endif %}
                 </div>
                 <div class="description">
