Organization: auto populate `slug` on creation
Show the `slug` field when creating the organization and auto-populate it based
on the name of the organization.

Requires https://github.com/readthedocs/readthedocs.org/pull/12297
Closes #25

--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -3,6 +3,32 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
+{% block head_scripts %}
+{{ block.super }}
+
+<script>
+ // TODO: where this code should live?
+ document.addEventListener("DOMContentLoaded", (event) => {
+     const titleInput = document.querySelector('input[name=name');
+     const slugInput = document.querySelector('input[name=slug]');
+
+     const slugify = (val) => {
+         return val.toString()
+                   .toLowerCase()
+                   .trim()
+                   // replace spaces, non-word chars, underscores and dashes with a single '-'
+                   .replace(/[^\w\s-_]+/g, '-')
+                   .replace(/[-\s]+/g, '-')
+     };
+
+     titleInput.addEventListener('keyup', (e) => {
+         slugInput.setAttribute('value', slugify(titleInput.value));
+     });
+ });
+
+</script>
+{% endblock head_scripts %}
+
 {% block title %}
   {% blocktrans %}Create a new organization{% endblocktrans %}
 {% endblock %}
