--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -1,12 +1,12 @@
 {% extends "organizations/base.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans blocktrans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
 {% block head_scripts %}
-{{ block.super }}
+  {{ block.super }}
 
-<script>
+  <script>
  // TODO: where this code should live?
  document.addEventListener("DOMContentLoaded", (event) => {
      const titleInput = document.querySelector('input[name=name');
@@ -26,21 +26,19 @@
      });
  });
 
-</script>
+  </script>
 {% endblock head_scripts %}
 
 {% block title %}
   {% blocktrans %}Create a new organization{% endblocktrans %}
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
   <div class="ui very padded container">
     <div class="ui stackable centered grid">
       <div class="eight wide computer sixteen wide tablet left aligned column">
 
-        <h2 class="ui medium heading">
-          {% trans "Join or create an organization" %}
-        </h2>
+        <h2 class="ui medium heading">{% trans "Join or create an organization" %}</h2>
 
         <div class="ui segment">
           <div class="ui link list" data-bind="semanticui: { tabmenu: {} }">
@@ -54,9 +52,7 @@
             <a class="item" data-tab="registered">
               <i class="fad fa-building big icon"></i>
               <div class="content">
-                <div class="header">
-                  {% trans "Join an existing organization" %}
-                </div>
+                <div class="header">{% trans "Join an existing organization" %}</div>
                 <div class="description">
                   <p>
                     {% blocktrans trimmed %}
@@ -70,9 +66,7 @@
             <a class="item" data-tab="new">
               <i class="fad fa-plus big icon"></i>
               <div class="content">
-                <div class="header">
-                  {% trans "Create a new organization" %}
-                </div>
+                <div class="header">{% trans "Create a new organization" %}</div>
                 <div class="description">
                   <p>
                     {% blocktrans trimmed %}
@@ -86,9 +80,7 @@
             <a class="item" data-tab="not-sure">
               <i class="fad fa-question big icon"></i>
               <div class="content">
-                <div class="header">
-                  {% trans "I'm not sure" %}
-                </div>
+                <div class="header">{% trans "I'm not sure" %}</div>
                 <div class="description">
                   <p>
                     {% blocktrans trimmed %}
@@ -144,9 +136,7 @@
 
           <div class="basic card">
             <div class="content">
-              <div class="header">
-                {% trans "30 day trial" %}
-              </div>
+              <div class="header">{% trans "30 day trial" %}</div>
               <div class="description">
                 {% blocktrans %}
                   No need to decide now. You can pick a plan that fits your
@@ -160,4 +150,4 @@
       </div>
     </div>
   </div>
-{% endblock %}
+{% endblock content %}
