Move the code to a JS file

--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -3,34 +3,6 @@
 {% load trans blocktrans from i18n %}
 {% load crispy from crispy_forms_tags %}
 
-{% block head_scripts %}
-  {{ block.super }}
-
-  <script>
- // TODO: where this code should live?
- document.addEventListener("DOMContentLoaded", (event) => {
-     const nameInput = document.querySelector('input[name=name');
-     const slugInput = document.querySelector('input[name=slug]');
-
-     const slugify = (val) => {
-         return val.toString()
-                   .toLowerCase()
-                   .trim()
-                   // Replace spaces, non-word chars, underscores and dashes with a single '-'
-                   // Copied from Django, which is what we are using under the hood
-                   // https://github.com/django/django/blob/1e9db35/django/utils/text.py#L469-L470
-                   .replace(/[^\w\s-_]+/g, '-')
-                   .replace(/[-\s]+/g, '-')
-     };
-
-     nameInput.addEventListener('keyup', (e) => {
-         slugInput.setAttribute('value', slugify(nameInput.value));
-     });
- });
-
-  </script>
-{% endblock head_scripts %}
-
 {% block title %}
   {% blocktrans %}Create a new organization{% endblocktrans %}
 {% endblock title %}
@@ -110,7 +82,9 @@
           {% endblocktrans %}
         </div>
 
-        <div class="ui tab" data-tab="new">
+        <div class="ui tab"
+             data-tab="new"
+             data-bind="using: new OrganizationCreateView()">
           <form class="ui form" action="" method="post">
             {% csrf_token %}
             {{ form|crispy }}
