Update from review

--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -108,7 +108,7 @@
              href="https://github.com/apps/{{ GITHUB_APP_NAME }}/installations/new/"
              target="_blank">
             <i class="fa-brands fa-github icon"></i>
-            {% trans "Install GitHub App" %}
+            {% trans "Update GitHub App permissions" %}
           </a>
 
           {% trans "or" %}
