--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -92,10 +92,7 @@
             {% alter_field form.slug data_bind="valueInit:slug, text: slug, textInput: slug" %}
             {{ form|crispy }}
 
-            {# djlint: off H021 #}
-            <div class="ui segment"
-                 data-bind="visible: example()"
-                 style="display: none">
+            <div class="ui segment">
               <div class="ui list">
                 <div class="item">
                   <div class="sub header">{% trans "Example URL for a project" %}</div>
@@ -103,7 +100,6 @@
                 </div>
               </div>
             </div>
-            {# djlint: on H021 #}
 
             <button class="ui primary button" type="submit">
               {% trans "Create organization" %}
