--- a/readthedocsext/theme/templates/builds/includes/build_name.html
+++ b/readthedocsext/theme/templates/builds/includes/build_name.html
@@ -33,59 +33,51 @@
 
 {% endcomment %}
 
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
 {# When not a page title, treat the entire breadcrumb as a link to the build #}
 {% if not is_page_title %}<a href="{{ build.get_absolute_url }}">{% endif %}
-<span class="ui {% if is_page_title %}large{% endif %} breadcrumb">
+  <span class="ui {% if is_page_title %}large{% endif %} breadcrumb">
     <span class="section">
-        <span class="ui grey text">
+      <span class="ui grey text">
         {# When used a a page title, link the sections independently #}
         {% if build.is_external %}
           {{ build.external_version_name | lower | capfirst }}
           {{ build.get_version_name }}
         {% else %}
-        {# Translators: this renders with the version name, example "Version latest" #}
+          {# Translators: this renders with the version name, example "Version latest" #}
           {% blocktrans trimmed %}
             Versions
           {% endblocktrans %}
         {% endif %}
-        </span>
+      </span>
     </span>
 
-  <span class="section">
+    <span class="section">
       <span class="divider">/</span>
       {% if is_page_title %}
-      <a href="{% url "projects_detail" build.project.slug %}?slug={{ build.get_version_slug }}">
-      {% endif %}
+        <a href="{% url "projects_detail" build.project.slug %}?slug={{ build.get_version_slug }}">
+        {% endif %}
 
-          {{ build.get_version_name }}
+        {{ build.get_version_name }}
 
-      {% if is_page_title %}
-      </a>
-      {% endif %}
-  </span>
-
-  {% if is_page_title %}
-    {# When used as a page title, show a section link for the filtered build list #}
-    <span class="divider">/</span>
-    {# Translators: this refers to a list of builds for a single project #}
-    <a class="section" href="{% url "builds_project_list" build.project.slug %}?version__slug={{ build.get_version_slug }}">
-      {% trans "Builds" %}
-    </a>
-  {% endif %}
-  <span class="divider">/</span>
-  <span class="active section">
-    {% if is_page_title %}
-      <a href="{{ build.get_absolute_url }}">
-    {% endif %}
-    <span class="ui grey text">
-      #{{ build.pk }}
+        {% if is_page_title %}</a>{% endif %}
     </span>
+
     {% if is_page_title %}
+      {# When used as a page title, show a section link for the filtered build list #}
+      <span class="divider">/</span>
+      {# Translators: this refers to a list of builds for a single project #}
+      <a class="section"
+         href="{% url "builds_project_list" build.project.slug %}?version__slug={{ build.get_version_slug }}">
+        {% trans "Builds" %}
       </a>
     {% endif %}
+    <span class="divider">/</span>
+    <span class="active section">
+      {% if is_page_title %}<a href="{{ build.get_absolute_url }}">{% endif %}
+        <span class="ui grey text">#{{ build.pk }}</span>
+        {% if is_page_title %}</a>{% endif %}
+    </span>
   </span>
-</span>
-</a>
-{% if not is_page_title %}</a>{% endif %}
+  {% if not is_page_title %}</a>{% endif %}
